package com.kna.vstay.config;

public class SecurityConfig {
}
