package com.kna.vstay.dto;

public class BookingRequest {
}
