package com.kna.vstay.entity;

public class Booking {
}
