package com.kna.vstay.enums;

public enum BookingStatus {
}
