package com.kna.vstay.service;

public class PaymentService {
}
